# rdk_LeRobot_tools

./: README.md  README_cn.md  bpu_act_control_robot.py  cpu_act_control_robot.py  cpu_dp_control_robot.py  cpu_pi0_control_robot.py  export_bpu_actpolicy.py  uvcvideo.ko
THU_AIRBOT/: control_robot_thu.py  thu_airbot.py
pycauchyS100tools/: CMakeLists.txt  compare_onnx.py
pycauchyS100tools/include/: pycauchyS100tools.h
pycauchyS100tools/src/: pycauchyS100tools.cpp  pycauchyS100tools_bindings.cpp
pycauchyX5tools/: CMakeLists.txt  compare_onnx.py
pycauchyX5tools/include/: pycauchyX5tools.h
pycauchyX5tools/src/: pycauchyX5tools.cpp  pycauchyX5tools_bindings.cpp
